baumstamm-lib/src/snapshots/baumstamm_lib__graph__test__xs-2.snap
---
source: baumstamm-lib/src/graph.rs
expression: layers
---
[
    [
        0,
        1,
    ],
    [
        2,
        3,
    ],
]
