baumstamm-lib/src/snapshots/baumstamm_lib__graph__test__xs.snap
---
source: baumstamm-lib/src/graph.rs
expression: graph
---
Graph {
    sources: [
        0,
        1,
    ],
    nodes: [
        Node {
            value: 0,
            children: [
                3,
            ],
        },
        Node {
            value: 1,
            children: [
                2,
                3,
            ],
        },
        Node {
            value: 2,
            children: [],
        },
        Node {
            value: 3,
            children: [],
        },
    ],
}
